# swagger/specs/v2/domio.json
@@ -578,7 +578,7 @@
         ]
       }
     },
-    "/domains/{name}": {
+    "/domains/name/{name}": {
       "get": {
         "tags": [
           "domain"
@@ -643,6 +643,50 @@
         "responses": {
           "400": {
             "description": "Invalid pet value"
+          }
+        },
+        "security": [
+          {
+            "jwt_key": []
+          }
+        ]
+      }
+    },
+    "/domains/sub/{id}": {
+      "get": {
+        "tags": [
+          "domain"
+        ],
+        "summary": "Find domain by subscription ID",
+        "description": "Returns a domain with name provided",
+        "operationId": "getDomainBySubId",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "description": "ID of subscription that domain is associated with",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "404": {
+            "description": "Domain not found",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          },
+          "400": {
+            "description": "Invalid ID supplied"
+          },
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/DomainInfo"
+            }
           }
         },
         "security": [
